Bug 932692 - Remove unused rotation variables in Android WebRTC driver. r=blassey